salesforce/generated/hubbell_ingest_api/objects/hubbell_User__dll/hubbell_User__dll.object-meta.xml
<CustomObject>
    <label>hubbell_User</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>