salesforce/generated/hubbell_ingest_api/objects/hubbell_User__dll/fields/KQ_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>KQ_OwnerId__c</fullName>
    <label>KQ_OwnerId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_OwnerId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>