salesforce/generated/hubbell_ingest_api/objects/hubbell_User__dll/fields/OwnerRole__c.field-meta.xml
<CustomField>
    <fullName>OwnerRole__c</fullName>
    <label>OwnerRole</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>OwnerRole</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>